--- a/admin-init.html
+++ b/admin-init.html
@@ -67,7 +67,7 @@
             resultDiv.className = 'result';
             
             try {
-                const response = await fetch('http://localhost:5000/api/admin/init', {
+                const response = await fetch('/api/admin/init', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -95,7 +95,7 @@
             resultDiv.className = 'result';
             
             try {
-                const response = await fetch('http://localhost:5000/api/admin/login', {
+                const response = await fetch('/api/admin/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
