feat: 이탈리아 성지 페이지 및 이미지 업데이트
- ItalyPage.tsx: 이탈리아 성지 페이지 UI 개선 및 도시별 이미지 추가
- AssisiPage.tsx: 아시시 성지 페이지 업데이트
- RomePage.tsx: 로마 성지 페이지 업데이트
- SpainPage.tsx: 스페인 성지 페이지 업데이트
- GreecePage.tsx: 그리스 성지 페이지 업데이트
- VaticanPage.tsx: 바티칸 성지 페이지 업데이트
- Header.tsx, Header2.tsx: 헤더 컴포넌트 업데이트
- PilgrimagePackagesPage.tsx, PilgrimagePackageDetailPage.tsx: 순례 패키지 페이지 업데이트
- index.html: 메타데이터 업데이트
- utils/seo.ts: SEO 유틸리티 업데이트
- images/italy/: 이탈리아 성지 이미지 추가 (로마, 아시시, 산조반니로톤도, 로레토, 시에나, 오르비에또, 란치아노)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="진주여행사 - 가톨릭 성지순례 전문" />
     <meta property="og:description" content="20년 경험의 가톨릭 성지순례 전문 여행사" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jinjoo-travel.com" />
+    <meta property="og:url" content="https://jjtravel.co.kr" />
     <meta property="og:site_name" content="진주여행사" />
     <meta property="og:locale" content="ko_KR" />
     
@@ -39,8 +39,8 @@
       "@type": "TravelAgency",
       "name": "진주여행사",
       "description": "가톨릭 성지순례 전문 여행사",
-      "url": "https://jinjoo-travel.com",
-      "telephone": "02-1234-5678",
+      "url": "https://jjtravel.com",
+      "telephone": "02-738-0747",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "KR",
