--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <meta name="msapplication-TileColor" content="#2563eb" />
     
     <!-- 파비콘 -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     
     <!-- 구조화된 데이터 -->
